force-app/main/default/objects/Batch_Order__c/Batch_Order__c.object-meta.xml
<CustomObject>
    <label>Batch Order</label>
    <nameField>
        <displayFormat>BO-{0000}</displayFormat>
        <label>Batch Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>