force-app/main/default/objects/Batch_Order__c/fields/Batch_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Order_Name__c</fullName>
    <label>Batch Order Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>