force-app/main/default/objects/Batch_Order__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batch Orders</relationshipLabel>
    <relationshipName>Batch_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>