force-app/main/default/objects/Batch_Order__c/listViews/All_Batch_Orders.listView-meta.xml
<ListView>
    <fullName>All_Batch_Orders</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Batch Orders</label>
</ListView>