force-app/main/default/objects/Batch_Order__c/listViews/Batch_Orders_Sent_To_Vendor.listView-meta.xml
<ListView>
    <fullName>Batch_Orders_Sent_To_Vendor</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent to Vendor</value>
    </filters>
    <label>Batch Orders Sent To Vendor</label>
</ListView>